CUDA 4V100 Optimal/results/compilation_logs/compile_size_42_reg_16_20252612_2303.txt
========== COMPILATION START ========== 
Parameters: PARAMETR_SIZE=42, MAXREGCOUNT=16 
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_4.exe aco_cuda_4.cu -I"C:\Program Files (x86)\Microsoft SDKs\MPI\Include" -L"C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x64" -lmsmpi -Xcompiler "/O2 /fp:fast /openmp /MT" -use_fast_math -lcudart -maxrregcount=16 -Xptxas "-O3,-v" --resource-usage 
 
aco_cuda_4.cu(398): warning #68-D: integer conversion resulted in a change of sign
          hashTable[i].key = -1;
                             ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

aco_cuda_4.cu(2198): error: return value type does not match the function type
      if (!mpi_is_master) return 0; 
                                 ^

aco_cuda_4.cu(2241): error: identifier "logFile" is undefined
          logFile << "Device " << device << ": " << prop.name << "; ";
          ^

aco_cuda_4.cu(2323): error: identifier "logFile" is undefined
      logFile << "PARAMETR_SIZE: " << 42 << "; "
      ^

3 errors detected in the compilation of "aco_cuda_4.cu".
aco_cuda_4.cu
========== COMPILATION END ========== 
Exit code: 2 
